--- a/XamarinCalendar/XamarinCalendar/MainPage.xaml
+++ b/XamarinCalendar/XamarinCalendar/MainPage.xaml
@@ -3,22 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinCalendar.MainPage">
 
-    <StackLayout>
-        <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
-        </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
-        <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
-        <Label FontSize="16" Padding="30,24,30,0">
-            <Label.FormattedText>
-                <FormattedString>
-                    <FormattedString.Spans>
-                        <Span Text="Learn more at "/>
-                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                    </FormattedString.Spans>
-                </FormattedString>
-            </Label.FormattedText>
-        </Label>
-    </StackLayout>
-
+    <ContentPage.Content>
+        <StackLayout BackgroundColor="#1f1f1f">
+            <Frame HasShadow="False" BackgroundColor="#1f1f1f">
+                <StackLayout>
+                    <Label Text="hh:mm:ss" TextColor="White"/>
+                    <Label Text="Day of the Week, dd/MMMM/yyyy" TextColor="#6b6b6b"/>
+                    <BoxView HeightRequest="1" WidthRequest="1" Color="#4c4c4c"/>
+                </StackLayout>
+            </Frame>
+        </StackLayout>
+    </ContentPage.Content>
 </ContentPage>
