--- a/XamarinCalendar/XamarinCalendar/MainPage.xaml
+++ b/XamarinCalendar/XamarinCalendar/MainPage.xaml
@@ -7,10 +7,12 @@
         <StackLayout BackgroundColor="#1f1f1f">
             <Frame HasShadow="False" BackgroundColor="#1f1f1f" Padding="0">
                 <StackLayout>
-                    <Label Text="hh:mm:ss" TextColor="White"
+                    <Label x:Name="Hour"
+                           Text="hh:mm:ss" TextColor="White"
                            Margin="20, 20, 20, -5"
                            FontSize="40"/>
-                    <Label Text="Day of the Week, dd/MMMM/yyyy" TextColor="#6b6b6b"
+                    <Label x:Name="DayOfTheWeek"
+                           Text="Day of the Week, dd/MMMM/yyyy" TextColor="#6b6b6b"
                            Margin="20, -5, 20, 5"/>
                     <BoxView HeightRequest="1" WidthRequest="1" Color="#4c4c4c" HorizontalOptions="FillAndExpand"/>
                 </StackLayout>
