--- a/XamarinCalendar/XamarinCalendar/MainPage.xaml
+++ b/XamarinCalendar/XamarinCalendar/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="XamarinCalendar.MainPage">
+             x:Class="XamarinCalendar.MainPage"
+             BackgroundColor="Black">
 
     <ContentPage.Content>
         <AbsoluteLayout BackgroundColor="#1f1f1f">
